[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "py4spice"
dynamic = ["version"]
description = "Python modules for running Ngspice"
readme = "README.md"
authors = [{ name = "Mark Chadwick", email = "mark.chadwick@techsharpen.com" }]
requires-python = ">=3.12"
license = { text = "MIT License" }
keywords = ["ngspice", "spice", "simulation"]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["numpy>=2.0", "scipy>=1.15", "matplotlib>=3.8"]

[project.urls]
Repository = "https://github.com/astorguy/py4spice"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.18.2",
    "scipy-stubs>=1.16.3.0",
    "pytest>=9.0.1",
    "pyright>=1.1.407",
]

[tool.hatch.version]
source = "vcs"

[tool.pyright]
include = [
    "src/py4spice",
    "circuits/sec_1_04_01_dividers/python",
    "circuits/sec_1_04_02_lin_reg/python",
    "circuits/sec_1_04_04_lin_reg/python",
]
typeCheckingMode = "basic"

[tool.mypy]
pretty = true
files = [
    "src/py4spice/__init__.py",
    "src/py4spice/analyses.py",
    "src/py4spice/control.py",
    "src/py4spice/globals_types.py",
    "src/py4spice/kicad_netlist.py",
    "src/py4spice/netlist.py",
    "src/py4spice/plot.py",
    "src/py4spice/print_section.py",
    "src/py4spice/sim_results.py",
    "src/py4spice/simulate.py",
    "src/py4spice/step_info.py",
    "src/py4spice/vectors.py",
    "src/py4spice/waveforms.py",
    "circuits/sec_1_04_01_dividers/python/sec_1_04_01.py",
    "circuits/sec_1_04_02_lin_reg/python/sec_1_04_02.py",
    "circuits/sec_1_04_04_lin_reg/python/sec_1_04_04.py",
]
check_untyped_defs = true
disallow_untyped_defs = true
strict = true
disable_error_code = "unused-ignore"
warn_unused_ignores = true
warn_return_any = true
